# hmat_lib

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  flat.c  lapack_wrapper.c  lapack_wrapper.h  svd.c  test.c  tree.c  tree.h
.github/workflows/: deploy_docs.yml  run_tests.yml
dev/: CMakeLists.txt  Makefile  common.c  common.h  test.c  timings.c  timings2.c
docs/: CMakeLists.txt  requirements.txt
docs/source/: api.rst  conf.py  dev.rst  glossary.rst  index.rst  installation.rst  theory.rst
docs/source/api/: allocators.rst  constructors.rst  dense_algebra.rst  hodlr.rst  hodlr_algebra.rst  vector_algebra.rst
docs/source/dev/: internal.rst
docs/source/dev/internal/: allocators.rst  constructors.rst  dense_algebra.rst  hodlr_algebra.rst  vector_algebra.rst
docs/source/theory/: hmat_lib.rst  hodlr_theory.rst  why_hodlr.rst
include/: blas_wrapper.h  error.h  flat.h  lapack_wrapper.h  tree.h  utils.h
include/hmat_lib/: allocators.h  constructors.h  dense_algebra.h  hodlr.h  hodlr_algebra.h  vector_algebra.h
src/: CMakeLists.txt  allocators.c  constructors.c  conversion.c  dense_algebra.c  flat.c  hodlr_algebra.c  lapack_wrapper.c  svd.c  test.c  tree.c  utils.c  vector_algebra.c
tests/: CMakeLists.txt  Makefile  extract_constructors.py  test_real_data.c
tests/include/: common_data.h  io.h  tree_stubs.h  utils.h
tests/src/: common_data.c  io.c  test_allocators.c  test_hodlr_dense_algebra.c  test_hodlr_hodlr_algebra.c  test_real_data.c  test_tree.c  test_tree_algebra.c  test_tree_construct.c  test_vector_algebra.c  tree_stubs.c  utils.c
tests/unit_tests/: CMakeLists.txt  test_allocators.c  test_constructors.c  test_hodlr_dense_algebra.c  test_hodlr_hodlr_algebra.c  test_tree_construct.c  test_vector_algebra.c
tests/utils/: CMakeLists.txt  common_data.c  common_data.h  expect.c  expect.h  hodlr.c  hodlr.h  io.c  utils.c  utils.h
